# voxel-sand-simulation

./: Cargo.toml  README.md  index.html
src/: camera.rs  main.frag.glsl  main.rs  main.vert.glsl  mesh.rs  shader.rs  voxel_manager.rs
